--- a/themes/LoveIt/assets/css/_variables.scss
+++ b/themes/LoveIt/assets/css/_variables.scss
@@ -4,10 +4,10 @@
 
 // ========== Global ========== //
 // Font and Line Height
-$global-font-family: system-ui, -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei UI, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !default;
+$global-font-family: Georgia,"Open Sans","Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei","Source Han Sans CN","WenQuanYi Micro Hei",Arial,sans-serif;
 $global-font-size: 16px;
 $global-font-weight: 400;
-$global-line-height: 1.5rem;
+$global-line-height: 30px;
 
 // Color of the background
 $global-background-color: #fff !default;
