修改样式以及增加{{indent}}词

--- a/themes/LoveIt/assets/css/_custom.scss
+++ b/themes/LoveIt/assets/css/_custom.scss
@@ -2,3 +2,8 @@
 // Custom style
 // 自定义样式
 // ==============================
+
+.single .content .highlight, .single .content .gist {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
