--- a/themes/LoveIt/layouts/posts/single.html
+++ b/themes/LoveIt/layouts/posts/single.html
@@ -89,7 +89,8 @@
 
         {{- /* Content */ -}}
         <div class="content" id="content">
-            {{- dict "Content" .Content "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
+            {{- $content := replace .Content "{{indent}}" "&emsp;&emsp;" -}}
+            {{- dict "Content" $content "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
         </div>
 
         {{- /* Footer */ -}}
