--- a/layouts/links/single.html
+++ b/layouts/links/single.html
@@ -4,9 +4,7 @@
 {{- $params := .Scratch.Get "params" -}}
 <div class="page single special">
     {{- /* Title */ -}}
-    <h1 class="single-title animated pulse faster">
-        {{- .Title -}}
-    </h1>
+    <h2 class="single-title animate__animated animate__pulse animate__faster">{{- .Title -}}</h2>
     {{- /* Subtitle */ -}}
     {{- with $params.subtitle -}}
     <h2 class="single-subtitle">{{ . }}</h2>
